docs: update openAPI specs
